Edit and save Widescreen URL property of offers

--- a/public/app/views/pages/offers/single.html
+++ b/public/app/views/pages/offers/single.html
@@ -162,6 +162,14 @@
                     <input class="form-group form-control" type="text" placeholder="Image URL" ng-model="offer.offerData.thumbnailUrl">
                 </td>
             </tr>
+            <tr>
+                <td>
+                    widescreenURL:
+                </td>
+                <td>
+                    <input class="form-group form-control" type="text" placeholder="Image URL" ng-model="offer.offerData.widescreenURL">
+                </td>
+            </tr>
         </table>
         <table>
             <tr>
