Added Indonesia to list of countries

--- a/public/app/views/pages/banners/single.html
+++ b/public/app/views/pages/banners/single.html
@@ -36,6 +36,7 @@
                             <option value="INDIA">India</option>
                             <option value="MALAYSIA">Malaysia</option>
                             <option value="SINGAPORE">Singapore</option>
+                            <option value="INDONESIA">Indonesia</option>
                         </select>
                     </div>
                 </td>
