--- a/public/app/views/pages/offers/single.html
+++ b/public/app/views/pages/offers/single.html
@@ -49,6 +49,7 @@
                             <option value="INDIA">India</option>
                             <option value="MALAYSIA">Malaysia</option>
                             <option value="SINGAPORE">Singapore</option>
+                            <option value="INDONESIA">Indonesia</option>
                         </select>
                     </div>
                 </td>
