--- a/public/app/views/pages/offers/all.html
+++ b/public/app/views/pages/offers/all.html
@@ -55,8 +55,8 @@
         <td>{{ mogly.validTo }}</td>
         <td>
           <a class="btn" ng-href="/offers/{{ mogly._id }}">&nbsp;Edit</a>
-          <a href="#" ng-click="" class="btn btn-primary">Delete</a>
-          <a href="#" ng-click="" class="btn btn-primary">Deactivate</a>
+          <a href="#" ng-click="offer.deleteOffer(mogly._id); " class="btn btn-primary">Delete</a>
+          <!-- <a href="#" ng-click="" class="btn btn-primary">Deactivate</a> -->
         </td>
       </tr></tbody>
     </table>
