--- a/public/app/views/pages/banners/all.html
+++ b/public/app/views/pages/banners/all.html
@@ -1,6 +1,6 @@
 <div class="page-header">
 	<h1>
-		Banners
+		Banners ({{ banner.banners.length }})
 		<a href="/banners/create" class="btn btn-default">
 			<span class="glyphicon glyphicon-download"></span>&nbsp;New Banner
 		</a>
