--- a/public/app/views/pages/offers/all.html
+++ b/public/app/views/pages/offers/all.html
@@ -1,6 +1,6 @@
 <div class="page-header">
 	<h1>
-		Offers
+		Offers ({{ offer.offers.length }})
 		<a href="/offers/create" class="btn btn-default">
 			<span class="glyphicon glyphicon-download"></span>&nbsp;New Offer
 		</a>
