--- a/public/app/views/pages/users/all.html
+++ b/public/app/views/pages/users/all.html
@@ -1,6 +1,6 @@
 <div class="page-header">
 	<h1>
-		Users
+		Users ({{ user.users.length }})
 		<a href="/users/create" class="btn btn-default">
 			<span class="glyphicon glyphicon-plus"></span>
 			New User
