Added Bangladesh, Colombia, Peru and Vietnam to the countries list in offers and banners.

--- a/public/app/views/pages/banners/single.html
+++ b/public/app/views/pages/banners/single.html
@@ -33,10 +33,14 @@
                 <td>
                     <div class="form-group">
                         <select ng-model="banner.bannerData.country">
+                            <option value="BANGLADESH">Bangladesh</option>
+                            <option value="COLOMBIA">Colombia</option>
                             <option value="INDIA">India</option>
-                            <option value="MALAYSIA">Malaysia</option>
-                            <option value="SINGAPORE">Singapore</option>
                             <option value="INDONESIA">Indonesia</option>
+                            <option value="MALAYSIA">Malaysia</option>
+                            <option value="PERU">Peru</option>
+                            <option value="SINGAPORE">Singapore</option>
+                            <option value="VIETNAM">Vietnam</option>
                         </select>
                     </div>
                 </td>
